--- a/Codes/CARAMOAN_landingPageDesign_ITAD.css
+++ b/Codes/CARAMOAN_landingPageDesign_ITAD.css
@@ -22,7 +22,7 @@ img:hover{
 	height: 105px;
 }
 body{
-  background-color:azure;
+  background-image:linear-gradient(to top right, #797EF6, #ffcceb);
   color:#5c6dc9;
   font-family:Verdana, Sans-serif;
 }
