--- a/Codes/CARAMOAN_PhotoGalleryDesign_ITAD.css
+++ b/Codes/CARAMOAN_PhotoGalleryDesign_ITAD.css
@@ -24,7 +24,7 @@ img:hover{
 	border-radius: 60px;
 }
 body{
-  background-color:azure;
+  background-image:linear-gradient(to top right,#797EF6, #ffcceb);
   color:#5c6dc9;
   font-family:Verdana, Sans-serif;
 }
