--- a/Codes/CARAMOAN_landingPageDesign_ITAD.css
+++ b/Codes/CARAMOAN_landingPageDesign_ITAD.css
@@ -1,7 +1,6 @@
 html{
 	scroll-behavior: smooth;
 }
-
 h1{
 		font-family: Georgia, Times New Roman, serif;
 		color: #384bb4;
@@ -16,15 +15,19 @@ h2{
 img{
 	width: 100px;
 	height: 100px;
-	padding: 15px;
+	padding: 8px;
 	opacity: 1;
+	border: 0px double pink;
 	border-radius:50px;
 	transition: 0.2s;
 }
 img:hover{
+	border: 3px double pink;
+	box-shadow: 20px 20px 50px 15px purple inset;
 	width: 105px;
 	height: 105px;
-}
+	transform: rotate(-1110deg);
+	}
 body{
   background-image:linear-gradient(to top right, #797EF6, #ffcceb);
   color:#5c6dc9;
