--- a/Codes/CARAMOAN_resumeDesign_ITAD.css
+++ b/Codes/CARAMOAN_resumeDesign_ITAD.css
@@ -1,6 +1,16 @@
 html{
 	scroll-behavior: smooth;
 }
+img{
+	width: 250px;
+	height: 250px;
+	padding: 8px;
+	border-radius:50px;
+	float: left;
+	margin-top: 15px;
+	margin-bottom: 10px;
+}
+
 h1{
 		font-family: Georgia, Times New Roman, serif;
 		color: #384bb4;
@@ -43,6 +53,7 @@ a:link{
 	color: green;
 	text-decoration: underline;
 	display: inline-block;
+	transition: 0.3s;
 }
 
 a:visited{
