--- a/Codes/CARAMOAN_PhotoGalleryDesign_ITAD.css
+++ b/Codes/CARAMOAN_PhotoGalleryDesign_ITAD.css
@@ -11,6 +11,12 @@ h2{
   text-align:center;
   text-decoration: underline;
   }
+ 
+h4{
+	font-family: Georgia, Times New Roman, serif;
+	color: #384bb4;
+	text-decoration: overline;
+	}
   
 img{
 	width: 150px;
