--- a/Codes/CARAMOAN_PhotoGalleryDesign_ITAD.css
+++ b/Codes/CARAMOAN_PhotoGalleryDesign_ITAD.css
@@ -26,6 +26,10 @@ img{
 	border-radius:50px;
 	transition: 0.3s;
 }
+#nav{
+	width: 300px;
+	height: 200px;
+}
 img:hover{
 	padding:5px;
 	-webkit-box-shadow: 15px 15px 20px rgba(0,0, 0, 0.4);
